# Drift

./: .gitattributes  Cargo.toml  MATHEMATICS.md  PALETTE.md  README.md  ROADMAP.md  drift-math.tex  flake.nix  hollow-orbit-math.tex
src/: lib.rs  main.rs
src/assets/: loader.rs  manager.rs  mod.rs
src/components/: README.md  graphics.rs  habitat.rs  mod.rs  movement.rs  ui.rs  velocity.rs
src/resources/: README.md  asset_handles.rs  current_orbit.rs  game_config.rs  mod.rs
src/states/: README.md  app_state.rs  game_stage.rs  mod.rs
src/systems/: README.md  mod.rs  movement.rs  orbital_decay.rs  repair.rs
